# eSquid

./: .gitignore  flake.nix  pyproject.toml  readme.md
eSquid/: __main__.py
eSquid/cogs/: Fun.py  Internals.py  Moderation.py  SelfServe.py
esquid/: __main__.py
esquid/cogs/: fun.py  internals.py  moderation.py  self_serve.py
nix/modules/: eSquid.nix
nix/pkgs/: default.nix
