[project]
name = "eSquid"
version = "0.0.1"
dependencies = [
    "discord.py >= 2.1.0"
]

[project.scripts]
esquid = "esquid.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["nix"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
